[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/moondance-labs/substrate", branch = "tanssi-polkadot-v1.0.0" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/moondance-labs/substrate", default-features = false,  branch = "tanssi-polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/moondance-labs/substrate", branch = "tanssi-polkadot-v1.0.0" }
sp-core = { git = "https://github.com/moondance-labs/substrate", features = ["std"],  branch = "tanssi-polkadot-v1.0.0" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
